--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-04-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Use linker_flags not compiler_flags with $LD.
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [linux]
+	<archive_cmds, archive_expsym_cmds>: With xlf and bgxlf
+	compilers, when linking with $LD, use $linker_flags not
+	$compiler_flags.
+
 2010-03-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Add FAQ, and FAQ entry for flags stripped at library link time.
