--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2010-05-21  Gary V. Vaughan  <gary@gnu.org>
 
+	Prepare for next release candidate.
+	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
+	number to 2.2.7b.
+	* libltdl/m4/libtool.m4, libltdl/m4/ltdl.m4,
+	libltdl/m4/ltoptions.m4, libltdl/m4/lt~obsolete.m4: These files
+	have been updated without a serial bump since the last release.
+	* libltdl/Makefile.inc (LTDL_VERSION_INFO): Bump Revision, to
+	account for bugfixes since the last release.
+	* libltdl/config/install-sh, libltdl/config/config.guess,
+	libltdl/config/config.sub, libltdl/config/texinfo.tex,
+	INSTALL: Updated from canonical source.
+	* NEWS: Update with missing entries from ChangeLog.
+	* HACKING: Note workaround for developer tool-path leakage bug.
+
 	Skip some tests in --disable-ltdl-install mode.
 	* tests/dlloader-api.at, tests/exceptions.at,
 	tests/lalib-syntax.at, tests/loadlibrary.at,
