--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 2.2.9b 2010-??-??: git version 2.2.9a, Libtool team:
+
+* New features:
+
+  - None.
+
 New in 2.2.8 2010-06-05: git version 2.2.7c, Libtool team:
 
 * No new features:
