--- a/THANKS
+++ b/THANKS
@@ -173,6 +173,7 @@
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
+  Warren Dodge			warren.l.dodge@Tektronix.com
   Vadim Zeitlin			vz-libtool@zeitlins.org
   Vincent Lefevre		vincent@vinc17.org
   Vincent Torri			vtorri@univ-evry.fr
