Fix a type in the 2.2.8 release notes.
* NEWS: s/ romoted/ promoted/ in the 2.2.8 release notes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2010-06-09  Gary V. Vaughan  <gary@gnu.org>
 
+	Fix a type in the 2.2.8 release notes.
+	* NEWS: s/ romoted/ promoted/ in the 2.2.8 release notes.
+
 	Don't warn about the blank line inserted into git commit message.
 	* clcommit.m4sh: When searching for accidental commits of mutliple
 	changes, ignore the second line of the message, which we inserted
