--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ New in 2.2.8 2010-06-05: git version 2.2.7c, Libtool team:
 
 * No new features:
 
-  - Bumped version number and romoted 2.2.7b release candidate to a full
+  - Bumped version number and promoted 2.2.7b release candidate to a full
     stable release.
 
 New in 2.2.7b 2010-05-20: git version 2.2.7a, Libtool team:
