--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-06-09  Gary V. Vaughan  <gary@gnu.org>
+
+	Fix a quoting bug with ./commit -a 'A U Thor'.
+	* clcommit.m4sh (func_commit): Use func_show_eval when calling
+	git, so that the previously func_quote_for_eval()ed $git_flags is
+	expanded properly.
+
 2009-09-15  Peter Rosin  <peda@lysator.liu.se>
 
 	Don't try the MSYS libdir path on MinGW.
