--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 2.2.9b 2010-??-??: git version 2.2.9a, Libtool team:
+New in 2.2.10 2010-06-10: git version 2.2.9a, Libtool team:
 
 * New features:
 
