--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2010-06-09  Gary V. Vaughan  <gary@gnu.org>
 
+	Set SCM version number to 2.2.11a.
+	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version
+	number to 2.2.11a.
+	* NEWS: Updated.
+
+	GNU Libtool 2.2.10 was released.
+
 	Prepare for next release.
 	* configure.ac, libltdl/configure.ac (AC_INIT): Bump version number
 	to 2.2.10.
